-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275398 | 17.0.2 | Martin Doerr | P4 | Resolved | Fixed | b03 |
C2: GraphKit::load_array_element only creates nodes for loading a raw element from the given array. This is wrong when the element is an Oop which needs a load barrier for some GCs.
There's currently only one usage of load_array_element for an Oop element in code which is only used by PPC64 and s390. These platforms currently don't support GCs with load barriers. So, this issue needs to get fixed in order to support these GCs.
It will also need to get fixed for possible future usages with Oop elements.
There's currently only one usage of load_array_element for an Oop element in code which is only used by PPC64 and s390. These platforms currently don't support GCs with load barriers. So, this issue needs to get fixed in order to support these GCs.
It will also need to get fixed for possible future usages with Oop elements.
- backported by
-
JDK-8275398 C2: GraphKit::load_array_element bypasses Access API
-
- Resolved
-
- relates to
-
JDK-8274851 [ppc64] Port zgc to linux on ppc64le
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u/451611ff
-
Commit
openjdk/jdk/a8210c53
-
Review
openjdk/jdk17u/191
-
Review
openjdk/jdk/5727
(1 links to)