8274401: C2: GraphKit::load_array_element bypasses Access API